--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
   </head>
   <body>
     <h1>Le Pokedex</h1>
-    <div id="pokemons1">
-      <button type="button" id="pb">Pikachu</button>
-    </div>
-    <div id="pokemons2">
-      <button type="button" id="mb">Mewtwo</button>
-    </div>
-    <div id="pokemons3">
-      <button type="button" id="sb">Snorlax</button>
-    </div>
+    <div id="pokemons1"></div>
+    <div id="pokemons2"></div>
+    <div id="pokemons3"></div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
