--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <h1>Le Pokedex</h1>
-    <div id="pokemons1"></div>
-    <div id="pokemons2"></div>
-    <div id="pokemons3"></div>
+    
+    <button type="button" id="pb">Pikachu</button>
+    <button type="button" id="mb">Mewtwo</button>
+    <button type="button" id="sb">Snorlax</button>
+    <div id="allpoke"></div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
