--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="main.css">
     <title>Pokedex</title>
   </head>
   <body>
     <h1>Le Pokedex</h1>
+    <img id="pb"  class="pokeBall" src="https://ubisafe.org/images250_/pokeball-transparent-8-bit.png">
+    <img id="mb" class="pokeBall"src="https://ubisafe.org/images250_/pokeball-transparent-8-bit.png">
+    <img id="sb" class="pokeBall" src="https://ubisafe.org/images250_/pokeball-transparent-8-bit.png">
 
-    <button type="button" id="pb">Pikachu</button>
+    <!-- <img src="https://ubisafe.org/images250_/pokeball-transparent-8-bit-6.png" alt="openPokeball"> -->
 
-    <button type="button" id="mb">Mewtwo</button>
-    
-    <button type="button" id="sb">Snorlax</button>
-
-    <div id="allpoke"></div>
-
-
+    <div id="allpoke">
+      <img id="trainer" src="https://kirby.nintendo.com/assets/img/intro/kirby-star2.png" class="animated forward lightSpeedIn 3s">
+    </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
