--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div id="allpoke">
       <img id="trainer" src="https://kirby.nintendo.com/assets/img/intro/kirby-star2.png" class="animated forward lightSpeedIn 3s">
+      <h4>Star Rider</h4>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
